Increase z-index of content controls to prevent overlap by image

--- a/public/stylesheets/sjea-manuscripts.css
+++ b/public/stylesheets/sjea-manuscripts.css
@@ -1,9 +1,9 @@
 * {
   margin: 0;
   padding: 0; }
-  
+
   #content-controls {
-      z-index: 1;
+      z-index: 15;
   }
 
 #content #content-controls #view-control {
